client/src/styles/recipecard.module.css
/*The following are the main colours that I want to use
    - Light green: #4BBF84
    - Egg-white: #EAEAEA
    - Purple: #89609E
    - Red: #B04632
    - Blue: #0079BF
    - Mustard yellow: #D29034
*/
:root {
  --pure-black: #000000;
  --transition-time-normal: 0.3s;
  --transition-time-secondary: 0.3s;
}

.RecipeCards {
  position: relative;
  transition: filter 0.1s, transform 0.1s;
}

.RecipeCardContainer {
  border-radius: 50px;
  position: relative;
  cursor: pointer;
  left: 0px;
  top: 0px;
  width: 350px;
  color: var(--pure-black);
  background-color: white;
  text-align: center;
  white-space: nowrap;
  overflow: hidden;
  -webkit-display: flex;
  -webkit-flex-direction: column;
  display: flex;
  flex-direction: column;
  min-height: 500px;
  box-shadow: 0 2px 8px 0 rgba(0, 0, 0, 0.2);
  margin: 25px;
  z-index: 1;
  transition: transform var(--transition-time-normal);
  transform: scale(1);
}

.RecipeCardImageContainer {
  width: 100%;
  height: 230px; /*NOTE: Needs to change if resizing cards (mobile)*/
  overflow-y: hidden;
  position: relative;
  transform: scale(1);
  transition: transform var(--transition-time-secondary);
  z-index: inherit;
}

.RecipeCardImage {
  float: left;
  width: 100%;
  height: 100%;
  position: absolute;
  bottom: 0;
  left: 0;
  object-fit: cover;
  /* object-position: bottom; */
}

.RecipeCardTitle {
  -webkit-box-sizing: border-box;
  -moz-box-sizing: border-box;
  box-sizing: border-box;
  text-align: center;
  font-size: 25px;
  font-weight: 600;
  float: left;
  width: 100%;
  color: #eaeaea;
  /* background-color: #4bbf84; */
  padding: 11px;
  white-space: normal;
  height: auto;
  z-index: 5;
  /* text-shadow: 0px 0px 25px grey; */
}

.RecipeCardDescription {
  padding: 20px;
  border-bottom-left-radius: 50px;
  border-bottom-right-radius: 50px;
  /* margin-bottom: 40px; */
  left: 25px;
  font-size: 20px;
  /* font-weight: 600; */
  text-align: center;
  /* color: rgb(125,125,125); */
  line-height: 25px;
  white-space: normal;
  overflow-y: hidden;
  position: absolute;
  color: rgb(140, 140, 140);
  /* height: max-content; */
  width: 310px;
  z-index: 3;
  box-shadow: 0 2px 8px 0 rgba(0, 0, 0, 0);
  background-color: white;
  transition: height 0.5s, box-shadow 0.8s,
    transform var(--transition-time-normal);
}

.RecipeCardDescriptionContainer {
  /* border-left: 3px solid rgb(160, 160, 160, 0.5); */
  display: flex;
  flex-direction: column;
  max-height: 135px;
  height: 100%;
  overflow: hidden;
  /* padding: 5px; */
  /* padding-bottom: 0px; */
  transition: height var(--transition-time-normal),
    max-height var(--transition-time-normal);
}

.RecipeCardIngredientBox {
  display: flex;
  flex-wrap: wrap;
}

.RecipeCardIngredientItem {
  font-size: 18px;
  padding: 5px 7px;
  border-radius: 10px;
  /* background-color: #4bbf84; */
  margin: 5px;
  color: white;
  box-shadow: 0 2px 3px 0 rgba(0, 0, 0, 0.2);
}

.NotMatchedIngredient {
  /* background-color: grey; */
}

/*Would like to match the colour of the site logo. Use the following site for inspiration:
https://lokeshdhakar.com/projects/color-thief/

For now, the colour will be hard coded*/
.LogoContainer {
  width: 80px;
  position: absolute;
  z-index: 2;
  transform: translate(20px, 20px);
  transition: transform var(--transition-time-normal);
}

.RecipeCardSiteLogo {
  width: 100%;
  height: 100%;
  border-radius: 50%;
  background-color: #ff6702;
  padding: 25% 0;
}

.RecipeCardSiteLogoImage {
  width: 50%;
  height: 50%;
  position: relative;
  bottom: -25%;
  left: 25%;
  object-fit: cover;
  transform: scale(1.4);
}

.ScoreContainer {
  width: 75px;
  position: absolute;
  z-index: 3;
  transition: transform var(--transition-time-normal);
  transform: translate(300px, -110px);
  /* transform: translate(450%, -110%); */
}

.ScoreCircle {
  width: 100%;
  height: 0;
  border-radius: 50%;
  background-color: #3c996a;
  border: 10px solid #4bbf84;
  padding: 50%;
  box-sizing: border-box;
}

.ScoreNumber {
  position: absolute;
  color: white;
  margin: 0 auto;
  font-family: "Heebo", sans-serif;
  font-size: 30px;
  transform: translate(-50%, -44%);
}

/*The following are classes for the secondary card items*/
.RecipeCardOffset {
  position: relative;
  /* margin: 15px; */
  margin-left: 26%;
  /* margin-right: 5px; */
}

.SecondaryRecipeCardContainer {
  /* border-radius: 70px; */
  position: absolute;
  cursor: pointer;
  left: 0px;
  top: 0px;
  width: 175px;
  color: #000000;
  background-color: transparent;
  text-align: center;
  white-space: nowrap;
  /* overflow: hidden; */
  -webkit-display: flex;
  -webkit-flex-direction: column;
  display: flex;
  flex-direction: column;
  height: 420px;
  margin: 25px 0 0 25px;
  z-index: 0;
  transition: transform var(--transition-time-normal);
  transform: scale(1);
}

.SecondaryRecipeCard {
  display: flex;
  border-radius: 40px;
  background-color: white;
  width: 100%;
  height: auto;
  align-items: center;
  box-shadow: 0 2px 8px 0 rgba(0, 0, 0, 0.2);
  flex-grow: 1;
  transform: translateX(12%);
  color: white;
}

/*All of these colors need to be BRIGHTER*/
/*
  Original Colours:
  #0079BF - Blue
  #D29034 - Orange
  #D2A734 - Yellow
  #B04632 - Red
  #778899 - Grey
  #4BBF84 - Green
*/
.CaloriesColor {
  background-color: rgb(0, 144, 228);
}

.FatColor {
  background-color: rgb(235, 155, 44);
}

.CarbsColor {
  background-color: rgb(233, 188, 64);
}

.ProteinColor {
  background-color: rgb(202, 70, 44);
}

.SugarColor {
  background-color: #95aabe;
}

.ServingSize {
  background-color: rgb(79, 201, 138);
}

.NutritionDescriptionItem {
  margin: 5px;
  /* padding: 5px; */
  display: flex;
  flex-direction: column;
  align-items: center;
  font-family: "Heebo";
  font-size: 22px;
}

.NutritionDescriptionInnerItem {
  display: flex;
  flex-direction: row;
  align-items: center;
  font-family: "Heebo";
  font-size: 22px;
}

.SetLeft {
  margin-left: auto;
}

.Bold {
  font-weight: 900;
}

.SmallFont {
  font-size: 20px;
  margin-left: 5px;
}

.DietUnit {
  font-size: 18px;
  margin-left: 3px;
}

.LargeWordFont {
  font-size: 16px !important;
}

.DietTitle {
  position: absolute;
  /* transform: translateX(-10%); */
  font-size: 20px;
  align-self: center;
  opacity: 0;
  line-height: 2rem;
  transition: transform var(--transition-time-secondary),
    opacity var(--transition-time-secondary);
}

.Center {
  margin: 0 auto;
  /* font-size: 25px; */
}

.NutritionDescriptionItemImage {
  width: 23%;
  opacity: 0.7;
  transition: opacity var(--transition-time-secondary),
    transform var(--transition-time-secondary);
  /* padding: 5px; */
}

/*The following are all of the animation classes for the recipe cards*/
.SecondaryRecipeCard:hover .NutritionDescriptionItemImage {
  opacity: 0;
  transform: translateX(50px);
}

.SecondaryRecipeCard:hover .DietTitle {
  opacity: 1;
  transform: translateX(0%);
}

.RecipeCards:hover .LogoContainer {
  transform: translate(-38px, 20px);
  z-index: 5;
}

.RecipeCards:hover .ScoreContainer {
  z-index: 5;
  transform: translate(345px, -80px);
}

.RecipeCards:hover .RecipeCardContainer {
  transform: scale(1.1) translateX(-50px);
  z-index: 4;
}

.RecipeCards:hover .SecondaryRecipeCardContainer {
  transform: scale(1.1) translateX(212px);
  z-index: 3;
}

.RecipeCards:hover .RecipeCardContainer .RecipeCardImageContainer {
  transform: scale(1.1);
}

.RecipeCards:hover .RecipeCardDescription {
  /* max-height: 300px; Some large number */
  /* height: 200px; */
  transform: scale(1.1) translate(-50px, 13px);
  z-index: 4;
  box-shadow: 0 10px 8px 0 rgba(0, 0, 0, 0.2);
}

.RecipeCards:hover .RecipeCardDescriptionContainer {
  max-height: max-content;
}

.RecipeCards:hover .maxIngredientContainer {
  opacity: 0;
  transform: scale(1.1) translate(-50px, 12px);
  z-index: 4;
}

.RecipeCards:hover {
  z-index: 9;
}

.RecipeCards:active {
  transform: scale(0.9);
  filter: brightness(0.9);
}

.maxIngredientContainer {
  display: flex;
  flex-direction: row;
  width: 27px;
  position: absolute;
  top: 87%;
  left: 11%;
  z-index: 3;
  opacity: 1;
  transition: opacity 0.4s ease-out, height 0.4s ease-out, margin 0.4s ease-out,
    transform var(--transition-time-normal);
}

.maxIngredientContainer div {
  width: 25px;
  height: 0;
  padding: 50%;
  border-radius: 50%;
  background-color: rgb(0, 0, 0, 0.3);
  margin: 0 7px;
  box-shadow: 0 2px 8px 0 rgba(0, 0, 0, 0.2);
}

